<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UyeKayitActivity">

    <include layout="@layout/actionbar"
        android:id="@+id/actionbarkayit"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtInfo"
        android:text="Yeni Kayıt Oluştur"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/giris_kayit_color"
        android:layout_below="@id/actionbarkayit"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_below="@id/txtInfo"
        android:hint="@string/magaza_ismi"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:id="@+id/txtusername"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtusername"
        android:id="@+id/email"
        android:maxLines="1"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parola"
        android:layout_below="@id/email"
        android:hint="@string/parola"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnuyekayit"
        android:text="@string/uye_ol"
        android:layout_below="@id/parola"
        android:layout_marginTop="50dp"
        android:layout_margin="10dp"
        android:background="@color/giris_kayit_color"/>

</RelativeLayout>