<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include layout="@layout/actionbar"
        android:id="@+id/actionbarlogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtInfologin"
        android:text="HESABINIZLA GİRİŞ YAPINIZ"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/giris_kayit_color"
        android:layout_below="@id/actionbarlogin"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInfologin"
        android:id="@+id/emaillogin"
        android:hint="@string/e_mail"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parolalogin"
        android:layout_below="@id/emaillogin"
        android:hint="@string/parola"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/girisyaplogin"
        android:text="@string/giris_yap"
        android:layout_below="@id/parolalogin"
        android:layout_marginTop="50dp"
        android:layout_margin="20dp"
        android:background="@color/giris_kayit_color"/>

</RelativeLayout>